fix(user-profile): overflowing div

--- a/front-end/mind_stack/src/app/pages/user-profile-page/user-profile-page.scss
+++ b/front-end/mind_stack/src/app/pages/user-profile-page/user-profile-page.scss
@@ -12,7 +12,7 @@
     position: absolute;
     display: block;
     border: solid 0px;
-    width: 80%;
+    width: 72%;
     height: 20%;
     margin-left: 5%;
     margin-top: 3%;
